[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/characters/moving_turret/moving_turret_controller.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 80.5, 6.5 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 65.5, 6.5 )

[sub_resource type="RayShape2D" id=50]
length = 16.0

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 0.5, 44.5 )

[sub_resource type="RayShape2D" id=52]
length = 86.0

[node name="turret_controller" type="Node2D"]
process_priority = -10
script = ExtResource( 1 )

[node name="pivot" type="Node2D" parent="."]

[node name="target_detect" type="Area2D" parent="pivot"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/target_detect"]
position = Vector2( 74.5, 0.5 )
shape = SubResource( 44 )

[node name="hind" type="CollisionShape2D" parent="pivot/target_detect"]
position = Vector2( -59.5, 0.5 )
shape = SubResource( 47 )
disabled = true

[node name="floor_detect" type="Area2D" parent="pivot"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/floor_detect"]
position = Vector2( 6, 7 )
shape = SubResource( 50 )

[node name="downard_target_detect" type="Area2D" parent="pivot"]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/downard_target_detect"]
position = Vector2( 0, 53 )
shape = SubResource( 51 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="pivot/downard_target_detect"]
position = Vector2( 0, 8 )
shape = SubResource( 52 )

[node name="shoot_cooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="hind_lookout_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="hind_lookout_timer" to="." method="_on_hind_lookout_timer_timeout"]
